# automated-planning-project

./: .gitignore  README.md  domain-robot.pddl  pb-robot.pddl  simple-domain-robot.pddl  simple-pb-robot.pddl
old/: domain-prova.pddl  domain-robot.pddl  pb-robot.pddl
problem1/: domain-robot.pddl  pb-robot.pddl  results.txt
problem2/: README.md  domain-robot.pddl  fluents-domain-robot.pddl  fluents-pb-robot.pddl  fluents-simple-pb.pddl  pb-robot.pddl  pb-simple.pddl  results-fluents.txt  results.txt
problem3/: domain-new.hddl  domain-robot-simple.hddl  domain-robot.hddl  output.txt  pb-robot.hddl  results.txt
problem4/: domain-robot.pddl  domain-simple.pddl  pb-robot.pddl  pb-simple.pddl  problem-simple.pddl  results.txt
problem5/: CMakeLists.txt  Dokerfile-humble  package.xml  results.txt  run.md
problem5/launch/: commands  launcher.py
problem5/pddl/: domain-simple.pddl
problem5/problem5tfd/: CMakeLists.txt  package.xml
problem5/problem5tfd/launch/: commands  launcher.py
problem5/problem5tfd/pddl/: domain-simple.pddl
problem5/problem5tfd/src/: empty_box_medicine_node.cpp  empy_box_tool_node.cpp  move_with_box3_node.cpp  move_with_box4_node.cpp  move_with_box_node.cpp  unloadrobot_node.cpp
problem5/src/: empty_box_food_node.cpp  empty_box_medicine_node.cpp  empty_box_tool_node.cpp  fill_item_node.cpp  load_carrier_node.cpp  move_node.cpp  move_with_box2_node.cpp
